# kismet-webui

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  cleanup_push_services.sh  config_manager.py  crypto_utils.py  device_detector.py  install-metagps.sh  install.sh  kismet-push-services.service  kismet-webui.service  kismet_site.conf  main.py  metagpsd.py  models.py  push_service_manager.py  push_services_startup.py  pyproject.toml  requirements-deploy.txt  routes.py  service_manager.py  system_detector.py  verify_sdr_config.py
.claude/: settings.local.json
instance/: kismet.db
static/css/: kismet.css
static/js/: device-detection.js
templates/: account.html  base.html  config.html  files.html  index.html  login.html  remote_push.html  setup.html  system_info.html
