[project]
name = "kismet-webui"
version = "0.1.0"
description = "kismet-webui to visualize the kismet_site.conf"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gpsdclient>=1.3.2",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
    "mgrs==1.4.5",
]
